modificacao calca jeans para bermuda jeans

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <td>Em estoque</td>
         </tr>
         <tr>
-            <td>Calça Jeans</td>
+            <td>Bermuda Jeans</td>
             <td>Azul</td>
             <td>MPc/td>
             <td>R$ 160,00</td>
