modificacao bermuda jeans azul para calça jeans vermelha

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <td>Em estoque</td>
         </tr>
         <tr>
-            <td>Bermuda Jeans</td>
-            <td>Azul</td>
+            <td>Calça Jeans</td>
+            <td>Vermelha</td>
             <td>MPc/td>
             <td>R$ 160,00</td>
             <td>Esgotado</td>
