mudança cor da camiseta de preta para azul

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Tabelas</h1>
 
     <table>
-        <tr>
+        <tr> 
             <th>Roupa</th>
             <th>Cor</th>
             <th>Tamanho</th>
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td>Camiseta</td>
-            <td>Preta</td>
+            <td>azul</td>
             <td>M</td>
             <td>R$ 70,00</td>
             <td>Em estoque</td>
