Cor da calça de vermelha para preta

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </tr>
         <tr>
             <td>Calça Jeans</td>
-            <td>Vermelha</td>
+            <td>Preta</td>
             <td>MPc/td>
             <td>R$ 160,00</td>
             <td>Esgotado</td>
